# LogPose

./: Cargo.toml  README.md  logpose.db
crates/logpose-agent/: Cargo.toml
crates/logpose-agent/src/: main.rs
crates/logpose-command/: Cargo.toml
crates/logpose-command/src/: main.rs
crates/logpose-core/: Cargo.toml
crates/logpose-core/src/: auth.rs  errors.rs  health.rs  instance.rs  lib.rs  protocol.rs  registry.rs  runtime.rs  service.rs  time.rs
crates/logpose-db/: Cargo.toml
crates/logpose-db/src/: lib.rs  sqlite.rs
crates/logpose-server/: Cargo.toml
crates/logpose-server/src/: main.rs
