[package]
name = "logpose-command"
version = "0.1.0"
edition = "2024"

[dependencies]
logpose-core = { path = "../logpose-core" }
logpose-db = { path = "../logpose-db" }
clap = { version = "4.4", features = ["derive", "env"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1", features = ["v4", "serde"] }
dotenvy = "0.15"
