[package]
name = "logpose-db"
version = "0.1.0"
edition = "2024"

[dependencies]
logpose-core = { path = "../logpose-core" }
rusqlite = { version = "0.29", features = ["bundled"] }
uuid = { version = "1", features = ["v4"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1.0"
