[package]
name = "logpose-server"
version = "0.1.0"
edition = "2024"

[dependencies]
logpose-core = { path = "../logpose-core" }
logpose-db = { path = "../logpose-db" }
axum = { version = "0.6", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
jsonwebtoken = "9"
rustls = "0.21"
rustls-pemfile = "1"
axum-server = { version = "0.5", features = ["tls-rustls"] }
tower-http = { version = "0.5", features = ["full"] }
tower = "0.4"
tracing = "0.1"
tracing-subscriber = "0.3"
uuid = { version = "1", features = ["v4", "serde"] }
utoipa = "4"
utoipa-swagger-ui = { version = "4", features = ["axum"] }
metrics = "0.22"
metrics-exporter-prometheus = "0.13"
dotenvy = "0.15"
